--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="utf-8">
     <title>Landing Page</title>
   </head>
   <body>
     <div class="header">
-      <h4>Header Logo</h4>
+      <p>Header Logo</p>
       <ul class="header-links">
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+        <li><a href="">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
       </ul>
     </div>
     <div class="content-box-1">
@@ -19,37 +20,37 @@
         <h2>This website is awesome</h2>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <div class="sign-up-button">
-          <p>Sign up</p>
+          <a href="">Sign Up</a>
         </div>
       </div>
       <div class="box1-right">
-        <img src="" alt="">
+        <img src="./temp.jpg" alt="Cactuses below a grey sky">
       </div>
     </div>
     <div class="content-box-2">
-      <h3>Some random information</h3>
+      <p class="box2-header">Some random information.</p>
       <div class="box2-items">
         <div class="item1">
-          <img src="" alt="">
+          <img src="temp.jpg" alt="Cactuses below a grey sky">
           <p>this is some subtext under an illustration of an image</p>
         </div>
         <div class="item2">
-          <img src="" alt="">
+          <img src="temp.jpg" alt="Cactuses below a grey sky">
           <p>this is some subtext under an illustration of an image</p>
         </div>
         <div class="item3">
-          <img src="" alt="">
+          <img src="temp.jpg" alt="Cactuses below a grey sky">
           <p>this is some subtext under an illustration of an image</p>
         </div>
         <div class="item4">
-          <img src="" alt="">
+          <img src="temp.jpg" alt="Cactuses below a grey sky">
           <p>this is some subtext under an illustration of an image</p>
         </div>
       </div>
     </div>
-    <div class="contnet-box-3">
-      <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-      <p>-Thor, God of Thunder</p>
+    <div class="content-box-3">
+      <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+      <p class="author">-Thor, God of Thunder</p>
     </div>
     <div class="content-box-4">
       <div class="card">
@@ -59,7 +60,7 @@
         </div>
         <div class="card-right">
           <div class="button">
-              <p>Sign up</p>
+            <a href="">Sign Up</a>
           </div>
         </div>
       </div>
